--- a/app/src/main/res/layout/activity_show_ads.xml
+++ b/app/src/main/res/layout/activity_show_ads.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:background="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
+        app:popupTheme="@style/AppTheme"
         app:title="Attendance Manager" />
 
 
