--- a/app/src/main/res/drawable-v24/button2.xml
+++ b/app/src/main/res/drawable-v24/button2.xml
@@ -3,7 +3,7 @@
 
     android:shape="rectangle">
 
-    <solid android:color="#7CD80808"/>
+    <solid android:color="@color/colorPrimary"/>
     <corners android:radius="25dp" />
 
 </shape>
