--- a/app/src/main/res/layout-v28/activity_check_attendance.xml
+++ b/app/src/main/res/layout-v28/activity_check_attendance.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:background="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
+        app:popupTheme="@style/AppTheme"
         app:title="Attendance Manager" />
 
     <TextView
@@ -29,7 +29,6 @@
         android:fontFamily="serif"
         android:text="------"
         android:textAllCaps="true"
-        android:textFontWeight="15dp"
         android:textSize="35dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
