--- a/app/src/main/res/layout/activity_admin_add_student.xml
+++ b/app/src/main/res/layout/activity_admin_add_student.xml
@@ -1,126 +1,200 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserActivitys.AdminActivitys.AddingStudent.AdminAddStudent">
 
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_gravity="center"
-        android:background="?attr/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
-        app:title="Attendance Manager" />
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:elevation="6.00dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".UserActivitys.AdminActivitys.RegisteringTeacher.RegisterUser">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-        <EditText
+                <ImageView
+                    android:id="@+id/toolbar_back"
+                    android:layout_width="45.00dp"
+                    android:layout_height="45.00dp"
+                    android:layout_gravity="center"
+                    android:padding="10.00dp"
+                    android:src="@drawable/ic_arrow"
+                    app:tint="#222222" />
 
-            android:id="@+id/studentId"
-            android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="10.00dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/p_semibold"
+                    android:text="Manage Student"
+                    android:textColor="@color/text4"
+                    android:textSize="17.00sp" />
+
+
+            </LinearLayout>
+    </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMaxTextSize="2dp"
-            android:inputType="number"
+            android:layout_weight="1"
+            android:background="@drawable/bg_bottombar_content_15"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="100dp"
             android:layout_marginTop="225dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:hint="studentId"
-            android:padding="20dp" />
+            android:padding="20dp" >
+
+            <EditText
+                android:id="@+id/studentId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#00ffffff"
+                android:fontFamily="@font/p_reguler"
+                android:hint="studentId"
+                android:textColor="@color/text4"
+                android:textColorHint="@color/text4"
+                android:textSize="17sp" />
+
+        </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/bg_bottombar_content_15"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="300dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:padding="20dp" >
 
         <EditText
             android:id="@+id/studentName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMaxTextSize="2dp"
-            android:inputType="text"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="300dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:background="#00ffffff"
+            android:fontFamily="@font/p_reguler"
             android:hint="Full Name"
-            android:padding="20dp" />
+            android:textColor="@color/text4"
+            android:textColorHint="@color/text4"
+            android:textSize="17sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/bg_bottombar_content_15"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="375dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:padding="20dp" >
 
         <EditText
             android:id="@+id/lecture"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoSizeMaxTextSize="2dp"
-            android:inputType="text"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="375dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:background="#00ffffff"
+            android:fontFamily="@font/p_reguler"
             android:hint="Lecture"
-            android:padding="20dp" />
+            android:textColor="@color/text4"
+            android:textColorHint="@color/text4"
+            android:textSize="17sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoSizeMaxTextSize="2dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="375dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="(ADS / ESW / DAI / AND)"
-            android:padding="20dp"
-            />
+    </LinearLayout>
 
-
-        <Button
-            android:id="@+id/addButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="450dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:background="@drawable/button"
-            android:text="Add"
-            android:textColor="#ffff"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:onClick="addStudents"/>
-
-        <Button
-            android:id="@+id/deleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="200dp"
-            android:layout_marginTop="450dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:background="@drawable/button2"
-            android:text="remove from course"
-            android:textColor="#ffff"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:onClick="deleteStudents"/>
-
-
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearLayout5"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_weight="1"
+        android:background="@drawable/bg_bottombar_content_15"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/vialogo_main"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="375dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:padding="24dp"
+        android:layout_marginStart="200dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00ffffff"
+            android:fontFamily="@font/p_reguler"
+            android:text="(ADS / ESW / DAI / AND)"
+            android:textColor="@color/text4"
+            android:textColorHint="@color/text4"
+            android:textSize="13sp" />
+
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="450dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/button2"
+        android:text="Add"
+        android:textColor="#ffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="addStudents"/>
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="450dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/button"
+        android:text="remove from course"
+        android:textColor="#ffff"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="deleteStudents"/>
+
+</RelativeLayout>
