--- a/app/src/main/res/layout/activity_check_course.xml
+++ b/app/src/main/res/layout/activity_check_course.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center"
         android:background="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/Theme.AndroidAttendance.PopupOverlay"
+        app:popupTheme="@style/AppTheme"
         app:title="Attendance Manager" />
 
 
@@ -93,15 +93,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="605dp"
-            android:src="@drawable/vialogo_main"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </RelativeLayout>
 
